# rusty

./: .gitignore  README.md
dupfinder/: Cargo.toml  README.md
dupfinder/src/: main.rs
konfi/: Cargo.toml
konfi/examples/: door.konfi  simple.konfi
konfi/src/: ast.rs  eval.rs  json.rs  lib.rs  main.rs  parser.rs  strings.rs
multicast/: Cargo.toml  README.md
multicast/etc/: README.md  multicast.service
multicast/src/: main.rs
netw/: Cargo.toml
netw/src/: main.rs
playground/src/: iterate.rs  lib.rs  oop.rs
threading/: Cargo.toml  README.md
threading/src/: main.rs
wake-on-lan/: Cargo.toml
wake-on-lan/src/: main.rs
