[package]
name = "konfi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7", features = ["alloc"] }
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"