[package]
name = "netw"
version = "0.1.0"
edition = "2021"
author = "Dennis Walter <dennis.walter@gmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
